Replaced back to burger menus - they are much less buggier cause they dont use the visible property

--- a/src/views/components/task-view/task-view.scss
+++ b/src/views/components/task-view/task-view.scss
@@ -4,11 +4,62 @@
   background: rgba(42, 46, 75, 0.5) !important
 }
 
+.bm-menu-wrap {
+  top: 0;
+}
+
 .task-side-view {
-  transition: 0.3s ease-out;
+  transition: 0.6s ease-out;
   background: $white;
   overflow-y: auto;
   box-shadow: 0px 0px 10px 0px #999999;
+
+  /* Position and sizing of clickable cross button */
+  .bm-cross-button {
+    height: 24px;
+    width: 24px;
+    top: 18px;
+    display: none;
+  }
+
+  /* Color/shape of close button cross */
+  .bm-cross {
+    background: #bdc3c7;
+  }
+
+  /* General sidebar styles */
+  .bm-menu {
+    padding: 0;
+    background: #f2f2f2;
+    font-size: 1.15em;
+  }
+
+  /* Morph shape necessary with bubble or elastic */
+  .bm-morph-shape {
+    fill: #373a47;
+  }
+
+  /* Wrapper for item list */
+  .bm-item-list {
+
+  }
+
+  /* Individual item */
+  .bm-item {
+    display: block;
+  }
+
+  /* Styling of overlay */
+  .bm-overlay {
+    background: rgba(0, 0, 0, 0.3);
+    top: 0;
+    right: 0; //Fixes an issue of bm is clickable when menu is collapsed
+  }
+}
+
+.bm-overlay {
+  top:0;
+  right: 0;
 }
 
 .task-view-container {
